--- a/SitemapValidator/SitemapValidator.csproj
+++ b/SitemapValidator/SitemapValidator.csproj
@@ -60,6 +60,7 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
