--- a/SitemapValidator/SitemapValidator.csproj
+++ b/SitemapValidator/SitemapValidator.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>SitemapValidator</RootNamespace>
     <AssemblyName>SitemapValidator</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkProfile />
@@ -36,6 +36,12 @@
     <Reference Include="CommandLine, Version=1.9.71.2, Culture=neutral, PublicKeyToken=de6f01bd326f8c32, processorArchitecture=MSIL">
       <HintPath>..\packages\CommandLineParser.1.9.71\lib\net45\CommandLine.dll</HintPath>
     </Reference>
+    <Reference Include="CsvHelper, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
+      <HintPath>..\packages\CsvHelper.2.16.3.0\lib\net45\CsvHelper.dll</HintPath>
+    </Reference>
+    <Reference Include="Kurukuru, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kurukuru.1.0.0\lib\netstandard2.0\Kurukuru.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -50,10 +56,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sitemap.cs" />
-    <Compile Include="SitemapLogger.cs" />
-    <Compile Include="SitemapRetriever.cs" />
-    <Compile Include="SitemapValidator.cs" />
-    <Compile Include="ValidationResult.cs" />
+    <Compile Include="SitemapExporter.cs" />
+    <Compile Include="SpinnerProgressUpdater.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
@@ -61,6 +65,12 @@
     </None>
     <None Include="packages.config" />
     <None Include="README.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SitemapValidator.Core\SitemapValidator.Core.csproj">
+      <Project>{20379ee2-7b22-4cc8-b829-6f4ae8321cc8}</Project>
+      <Name>SitemapValidator.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
