--- a/SitemapValidator/packages.config
+++ b/SitemapValidator/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net47" />
+  <package id="CsvHelper" version="2.16.3.0" targetFramework="net47" />
+  <package id="Kurukuru" version="1.0.0" targetFramework="net47" />
 </packages>
